Add loading indicator for API calls on page 3 and page 4

--- a/index.html
+++ b/index.html
@@ -949,6 +949,14 @@
         </div>
     </div>
 
+    <!-- Loading Overlay -->
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-content">
+            <div class="loading-spinner"></div>
+            <div class="loading-text">Processing...</div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
